--- a/finastra/package.json
+++ b/finastra/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
+    "framer-motion": "^12.6.3",
     "react": "^19.1.0",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
